# parse_yacht-parts

./: LICENSE  README.MD  pyproject.toml
app/: brand_connector_dump_excel.py  brands.txt
app/app/: items.py  pipelines.py  processor_func.py  settings.py  utils.py
app/app/spiders/: my_spider.py  my_spider_v2.py
