[tool.poetry]
name = "scrapy-parse-yacht-parts"
version = "0.1.0"
description = ""
authors = ["PingWinCheck <ankolt@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
